[package]
name = "tensorneko_lib"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tensorneko_lib"
crate-type = ["cdylib"]
path = "src/tensorneko_lib/lib.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "stub"
