[package]
name = "tensorneko_lib"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tensorneko_lib"
crate-type = ["cdylib"]
path = "src/tensorneko_lib/lib.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
ndarray = { version = "0.15.0", features = ["blas", "rayon", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rayon = "1.10.0"
simd-json = "0.13.9"
serde-ndim = { version = "1.1.0", features = ["ndarray"] }
log = "0.4.21"
env_logger = "0.11.3"
ndarray-stats = "0.5.1"
blas-src = { version = "0.10.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[package.metadata.maturin]
python-source = "stub"
